# Focust

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  RELEASE_NOTE.md  biome.json  biome.jsonc  index.html  justfile  package-lock.json  package.json  settings.html  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/: RELEASE_NOTE_TEMPLATE.md  copilot-instructions.md  pull_request_template.md
.github/workflows/: pr-check.yml  release.yml
docs/: ARCHITECTURE.md  CODE_SIGNING.md  CONFIGURATION.md  CONFIGURATION.zh-CN.md  QUICKSTART.md  QUICKSTART.zh-CN.md  RELEASE_WORKFLOW.md  UPDATER_SIGNING.md
scripts/: setup-signing.ps1  setup-signing.sh  setup-updater-signing.ps1  setup-updater-signing.sh
src/: App.vue  main.ts  settings.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: i18n.json  suggestions.toml  tray_i18n.json
src-tauri/src/: cmd.rs  config.rs  core.rs  lib.rs  main.rs  monitors.rs  platform.rs  scheduler.rs  utils.rs
src-tauri/src/cmd/: audio.rs  autostart.rs  config.rs  mod.rs  payload.rs  scheduler.rs  suggestions.rs  system.rs  window.rs
src-tauri/src/config/: app_exclusion.rs  core.rs  models.rs
src-tauri/src/core/: audio.rs  ideas.rs  mod.rs  payload.rs  schedule.rs  suggestions.rs  theme.rs  time.rs
src-tauri/src/core/audio/: mod.rs  models.rs  player.rs
src-tauri/src/monitors/: dnd.rs  idle.rs  orchestrator.rs
src-tauri/src/platform/: dnd.rs  hotkey.rs  i18n.rs  notifications.rs  tray.rs  window.rs
src-tauri/src/platform/dnd/: linux.rs  macos.rs  models.rs  windows.rs
src-tauri/src/scheduler/: attention_timer.rs  attention_timer_tests.rs  break_scheduler.rs  break_scheduler_tests.rs  core.rs  event.rs  event_emitter.rs  manager.rs  manager_integration_tests.rs  mod.rs  models.rs  monitor.rs  monitor_integration_tests.rs  monitors.rs  shared_state.rs  stress_tests.rs  test_helpers.rs
src-tauri/src/scheduler/monitors/: app_whitelist.rs  dnd.rs  idle.rs  orchestrator.rs
src-tauri/src/utils/: error.rs  logging.rs
src-tauri/tests/: scheduler_integration_test.rs
src/composables/: useComputed.ts  useToast.test.ts  useToast.ts
src/i18n/: index.ts
src/stores/: config.test.ts  config.ts  scheduler.ts  suggestions.test.ts  suggestions.ts
src/test/: setup.ts  (+1 more)
(+58 files in other folders)
