[package]
name = "focust"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "focust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
debug-assertions = true
codegen-units = 256
lto = false
panic = "unwind"

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
debug-assertions = false
codegen-units = 1
lto = true
panic = "abort"
strip = "debuginfo"

[build-dependencies]
tauri-build = { version = "2", features = [] }
ts-rs = { version = "11.0.1", features = ["chrono-impl"] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
serde = { version = "^1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "*", features = ["time", "macros"] }
figment = { version = "0.10", features = ["toml"] }
toml = "0.9"
anyhow = "1.0.98"
thiserror = "2.0.17"
user-idle2 = "0.6.2"
ts-rs = { version = "11.0.1", features = ["chrono-impl"] }
rand = "0.9.2"
rodio = "0.21.1"
parking_lot = "0.12"
sys-locale = "0.3.2"
tauri-plugin-notification = "2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-appender = "0.2.3"
futures = "0.3.31"
sysinfo = "0.37.2"

[dev-dependencies]
tempfile = "3.23.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_Foundation"] }

[target.'cfg(target_family = "unix")'.dependencies]
tokio = { version = "*", features = ["process"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5"
futures-util = "0.3"

[package.metadata.cargo-machete]
ignored = ["tauri-build"]
